[package]
name = "celer-pay-module-rpc"
version = "0.8.7"
authors = ['Celer']
edition = "2018"

[dependencies]
jsonrpc-core = "14.2.0"
jsonrpc-core-client = "14.2.0"
jsonrpc-derive = "14.2.0"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-rpc]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.celer-pay-module-rpc-runtime-api]
default-features = false
path = './runtime-api'
version = '0.8.7'

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-runtime/std",
  "sp-api/std",
  "celer-pay-module-rpc-runtime-api/std"
]