[package]
name = "celer-pay-module-rpc-runtime-api"
version = "0.8.7"
authors = ["Celer"]
edition = "2018"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-application-crypto]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"sp-std/std",
	"sp-application-crypto/std",
]